# mathematical-optimization-papers-rss

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: update-feed.yml
data/: state.json
docs/: feed.xml  index.html
src/optimization_rss/: config.py  dedupe.py  filters.py  main.py  models.py  rss.py  state.py
src/optimization_rss/sources/: arxiv.py  semantic_scholar.py
